fixing minor bugs

--- a/assets/main.css
+++ b/assets/main.css
@@ -50,6 +50,14 @@
     @apply border-red-600 ring-1 ring-red-600 focus:border-red-600 focus:ring-red-600 !important;
   }
 
+  /* Select Input */
+  .form-select {
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3E%3C/svg%3E");
+    background-position: left 0.9rem center;
+    background-size: 1.5em 1.5em;
+    background-repeat: no-repeat;
+  }
+
   /* Scrollbar */
   .is-scroll::-webkit-scrollbar {
     @apply h-1 w-1.5;
@@ -89,4 +97,3 @@
     @apply ltr:pl-1.5 rtl:pr-1.5;
   }
 }
-
