--- a/assets/main.css
+++ b/assets/main.css
@@ -4,7 +4,7 @@
 
 @layer base {
   html {
-    @apply text-gray-900;
+    @apply text-black;
     -webkit-tap-highlight-color: transparent;
   }
 
@@ -80,6 +80,10 @@
   }
 
   /* Custom typography */
+  .prose ul,
+  .prose ol {
+    @apply leading-[2.25] xs:leading-loose !important;
+  }
   .prose :where(h2):not(:where([class~='not-prose'] *)) {
     @apply mt-0 pt-8;
   }
@@ -96,23 +100,4 @@
   .prose :where(ul > li):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
     @apply ltr:pl-1.5 rtl:pr-1.5;
   }
-}
-
-
-:root {
-  /*General*/
-  --dp-border-radius: 0.375rem; /*Configurable border-radius*/
-  --dp-input-padding: 0.8rem 0.25rem; /*Padding in the input*/
-  --dp-action-buttons-padding: 10px 10px; /*Adjust padding for the action buttons in action row*/
-}
-
-.dp__theme_light {
-  --dp-primary-color: rgb(17 24 39);
-}
-
-.dp__input::placeholder {
-  @apply !text-gray-600 !transition-none;
-}
-.dp__input:focus {
-  border: 2px solid;
 }
