--- a/assets/main.css
+++ b/assets/main.css
@@ -110,7 +110,8 @@
     @apply ltr:pl-[1.125rem] rtl:pr-[1.125rem];
   }
 
-  .prose :where(ul > li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+  .prose
+    :where(ul > li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
     @apply ltr:pl-1.5 rtl:pr-1.5;
   }
 
@@ -139,15 +140,27 @@
     scrollbar-width: none; /* Firefox */
   }
   /* Filepond */
-.filepond--root {
-  @apply font-sans !important;
+  .filepond--root {
+    @apply font-sans !important;
+  }
+
+  .filepond--panel-root {
+    @apply border border-dashed bg-transparent !important;
+  }
+
+  .filepond--credits {
+    @apply hidden !important;
+  }
 }
 
-.filepond--panel-root {
-  @apply border border-dashed bg-transparent !important;
-}
-
-.filepond--credits {
-  @apply hidden !important;
-}
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
