--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
