Fixed issues design part 1

--- a/assets/main.css
+++ b/assets/main.css
@@ -6,7 +6,7 @@
 
 @layer base {
   html {
-    @apply text-black;
+    @apply font-light text-black;
     -webkit-tap-highlight-color: transparent;
   }
 
